--- a/charts/dp-config-es/templates/apm-ingress.yaml
+++ b/charts/dp-config-es/templates/apm-ingress.yaml
@@ -1,12 +1,12 @@
 #
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
 
 #
-{{ if .Values.apm.enabled -}}
+{{ if .Values.apm.ingress.enabled -}}
 kind: Ingress
 apiVersion: networking.k8s.io/v1
 metadata:
