--- a/charts/dp-config-es/templates/kibana.yaml
+++ b/charts/dp-config-es/templates/kibana.yaml
@@ -1,11 +1,12 @@
 #
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
 
 #
+{{ if .Values.kibana.enabled -}}
 apiVersion: kibana.k8s.elastic.co/v1
 kind: Kibana
 metadata:
@@ -28,3 +29,4 @@ spec:
           konghq.com/protocol: https
       spec:
         type: ClusterIP
+{{- end -}}
