promoting platform-bootstrap chart: 1.6.0-alpha.7

--- a/charts/platform-bootstrap/Chart.yaml
+++ b/charts/platform-bootstrap/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: platform-bootstrap
 description: TIBCO Platform bootstrap chart
 type: application
-version: 1.5.1005
-appVersion: "1.5.1"
+version: 1.6.0-alpha.7
+appVersion: "1.6.0"
 keywords:
   - tibco-platform
   - platform
@@ -19,5 +19,5 @@ annotations:
   app.helm.sh/name: platform-bootstrap
 dependencies:
   - name: tp-cp-bootstrap
-    version: "1.5.1005"
+    version: "1.6.3"
     repository: alias:tibco-platform
