--- a/charts/tp-cp-core/charts/pengine/templates/tp-cp-pengine.yaml
+++ b/charts/tp-cp-core/charts/pengine/templates/tp-cp-pengine.yaml
@@ -162,6 +162,10 @@ spec:
           value: "6832"
         - name: TP_CP_PERMISSIONS_ENGINE_LOG_LEVEL
           value: debug
+        - name: LRU_CACHE_SIZE
+          value: "10000"
+        - name: ENABLE_PERMISSION_ENFORCER_CACHE
+          value: "true"
         - name: TP_CP_PERMISSIONS_ENGINE_CORS_ALLOW_HEADERS
           value: "Content-Type, X-Atmosphere-For-User"
         - name: PGHOST
