--- a/charts/tp-cp-core/charts/identity-management/templates/idm.yaml
+++ b/charts/tp-cp-core/charts/identity-management/templates/idm.yaml
@@ -190,11 +190,11 @@ spec:
             configMapKeyRef:
               name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
               key: TP_CP_IDP_HOST
-        - name: TP_CP_ADMIN_WEB_SERVER_HOST
+        - name: TP_CP_WEB_SERVER_HOST
           valueFrom:
             configMapKeyRef:
               name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
-              key: TP_CP_ADMIN_WEB_SERVER_HOST
+              key: TP_CP_WEB_SERVER_HOST
         - name: TSC_CONFIG_LOCATION
           value: /private/tsc
         - name: TSC_DNS_DOMAIN
@@ -241,10 +241,10 @@ spec:
             configMapKeyRef:
               name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
               key: TP_CP_PERMISSIONS_ENGINE_HOST
-        - name: IDENTITY_MANAGEMENT_ADMIN_WEB_SERVER_JWKS_URI_PATH
-          value: http://$(TP_CP_ADMIN_WEB_SERVER_HOST):3000/admin/public/v1/jwks
+        - name: IDENTITY_MANAGEMENT_CP_WEB_SERVER_JWKS_URI_PATH
+          value: http://$(TP_CP_WEB_SERVER_HOST):3001/admin/public/v1/jwks
         - name: TSC_HOST_MAPPING
-          value: '{"host": "$(TSC_DNS_DOMAIN)", "tenantId": "TSC", "errorUri": "/tsc/error/401", "suspendedUri": "/tsc/error/403", "allowExpiredSubscription": true, "jwksUri": "$(IDENTITY_MANAGEMENT_ADMIN_WEB_SERVER_JWKS_URI_PATH)"}'
+          value: '{"host": "$(TSC_DNS_DOMAIN)", "tenantId": "TSC", "errorUri": "/tsc/error/401", "suspendedUri": "/tsc/error/403", "allowExpiredSubscription": true, "jwksUri": "$(IDENTITY_MANAGEMENT_CP_WEB_SERVER_JWKS_URI_PATH)"}'
         - name: ADMIN_HOST_MAPPING
           value: '{"host": "$(TSC_ADMIN_DNS_DOMAIN)", "tenantId": "ADMIN", "errorUri": "/tsc/error/401", "suspendedUri": "/tsc/error/403", "maxValidityForAccessToken": "8h"}'
         - name: IDENTITY_MANAGEMENT_HOST_MAPPINGS
